trying to fix the spacing between head and content

--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,11 @@ p {
 	height: 100%;
 	text-align: center;
 }
+@media (max-width: 1123px) {
+	.content {
+		padding-top: 180px;
+	} 
+}
 
  /* this box keepts the three divs in place */
 
